--- a/public/css/style.css
+++ b/public/css/style.css
@@ -206,3 +206,16 @@ footer {
   background-size: cover;
 }
 
+.box-pictures {
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  border: 1px solid black;
+  margin: 1rem auto;
+}
+
+.content-pictures {
+  width: 100%;
+  height: 100%;
+}
+
